#top modificando #bitcoin

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <div class="col-lg-5 col-lg-offset-3 text-center v-center">
           <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a>
           <a href="https://github.com/0th4rw4" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
-          <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" />Clave GPG</a>
-          <span class="text-right">
-            <img src="iconos/bitcoin.png" alt="Bitcoin" />
+          <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" />Clave GPG</a>          
+        </div>
+
+        <div id="bitcoin" class="text-right">
+            <img src="iconos/bitcoin.png" alt="Bitcoin" width="199" height="60" />
             <br/>
             <a href="https://bitcoin.org/es/faq" title="Que es Bitcoin" rel="nofollow"> ¿Que es esto?</a>
-          </span>
-          
-        </div>
+          </div>
       </div> <!-- /.container -->
     </div> <!-- /.jumbotron -->
 
