#top modificando .social

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>+1Up Elevate Ahora</p>
         <p><a class="btn btn-warning btn-lg" href="#weapons"> </a></p>
 
-        <div class="col-lg-5 col-lg-offset-3 text-center v-center">
+        <div class="col-lg-5 col-lg-offset-3 text-center v-center social">
           <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a>
           <a href="https://github.com/0th4rw4" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
           <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" /></a>          
