--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nave Binario | Desarrollo Web</title>
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/strapped.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="logo1.png">
@@ -39,7 +39,7 @@
             <li><a href="#top" class="nav-link">Binario</a></li>
             <li><a href="#weapons" class="nav-link">Recursos Principales</a></li>
             <li><a href="#top" class="nav-link" title="Proximamente">A Voluntad!</a></li>
-            <li><a href="#whoami" class="nav-link">El Capitan</a></li>
+            <!-- <li><a href="#whoami" class="nav-link">El Capitan</a></li> -->
           </ul>
         </div> <!-- /.navbar-collapse -->
       </div> <!-- /.container -->
@@ -169,7 +169,7 @@
           </li> <!-- /.benefit -->
          </ul>
       </div> <!-- /.row -->
-
+	<!--
       <div class="sect-border"></div>
 
       <h3 id="whoami" class="h2 subhead">/me otharwa</h3>
@@ -177,8 +177,8 @@
         <div class="col-md-10 col-md-offset-1 text-center">
           <span class="imgMe"></span>
           <p>Desarrollador, amante de los nuevos desafios, usuario fiel a GNU/Linux.</p>
-        </div> <!-- /.col-md-10 -->
-      </div> <!-- /.row -->
+        </div> /.col-md-10
+      </div> /.row -->
     </div> <!-- /.container -->
 
     <footer>
