--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/strapped.css" rel="stylesheet">
+    <link href="css/navebinario.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="logo1.png">
 
@@ -45,7 +45,7 @@
       </div> <!-- /.container -->
     </nav> <!-- /.navbar -->
 
-    <div id="top" class="jumbotron">
+    <div id="top" class="binario">
       <div class="container">
         <p class="h1">Nave Binario <br /> <img class="logo0" src="logo0.png" alt="Nave Binario" /></p>
         <p class="h2">Transporta tu proyecto al proximo nivel</p>
@@ -64,7 +64,7 @@
             <a href="https://bitcoin.org/es/faq" title="Que es Bitcoin" rel="nofollow"> ¿Que es esto?</a>
           </div>
       </div> <!-- /.container -->
-    </div> <!-- /.jumbotron -->
+    </div> <!-- /.binario -->
 
     <div class="container">
 
