--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <footer>
       <div class="container clearfix">
         <p class="pull-left">
-          <!-- Copyright &copy; Acme Corp 2013 -->
+          Tecnologia de las comunicaciones II - TP I - Sebastian Arca
         </p>
         <p class="pull-right">
-           <!-- a template from <a href="http://coverstrap.com">Coverstrap</a>-->
+           <a href="https://github.com/0th4rw4/navebinario.com">Codigo Libre</a>
         </p>
       </div> <!-- /.container -->
     </footer>
@@ -183,4 +183,22 @@
       });
     </script>
   </body>
+<!-- -
+# See AUTHORS for a list of contributors
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation; either version 3 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General
+# Public License along with this program.  If not, see
+# <http://www.gnu.org/licenses/>.
+->
 </html>
+
