primer instancia del HTML terminada

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="nav-link">Binario</a></li>
             <li><a href="#weapons" class="nav-link">Recursos Principales</a></li>
-            <li><a href="#top" class="nav-link" title="Proximamente">A Voluntad!</a></li>
+            <li><a href="#a_voluntad" class="nav-link" title="Proximamente">A Voluntad!</a></li>
             <!-- <li><a href="#whoami" class="nav-link">El Capitan</a></li> -->
           </ul>
         </div> <!-- /.navbar-collapse -->
@@ -157,6 +157,16 @@
             <h3>Angular</h3>
           </li> <!-- /.benefit -->
          </ul>
+      </div> <!-- /.row -->
+
+      <div class="sect-border"></div>
+      
+      <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 text-center">
+          <p>A voluntad, realizo hacesoramientos, algunos mantenimientos menores y escuchar ideas. Publico poco codigo ultimamente pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias a por la generocidad.</p>
+          <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color... en especial si es comida.</p>
+        </div>
       </div> <!-- /.row -->
     </div> <!-- /.container -->
 
