Preparando el Trabajo para la entrega...

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div> <!-- /.row -->
 
       <div class="sect-border"></div>
-      
+
       <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1 text-center">
@@ -194,7 +194,8 @@
     </script>
   </body>
 <!-- -
-# See AUTHORS for a list of contributors
+# Autor: Sebastian Arca <sebastianarca@gmail.com>
+# DNI: 36724020
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
