adaptado completo a mobile

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>+1Up Elevate Ahora</p>
         <p><a class="btn btn-warning btn-lg" href="#weapons"> </a></p>
 
-        <div class="col-lg-5 col-lg-offset-3 text-center v-center social">
+        <div class="social">
           <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a>
           <a href="https://github.com/0th4rw4" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
           <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" /></a>          
@@ -73,7 +73,7 @@
       <h3 id="weapons" class="subhead">Recursos Principales</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1 text-center">
-          <p>Estos son algunos lenguajes de programacion y frameworks con los cuales se trabaja y desarrolla. A la hora de programar siempre se intenta seguir el principio KISS (Keep It Simple, Stupid!). Se usa el manejo de objetos y funciones reutilizables para mejorar la flxibilidad de los proyectos.</p>
+          <p>Estos son algunos lenguajes de programacion y frameworks con los cuales se trabaja y desarrolla en NaveBinario. <br />A la hora de programar siempre invocamos el principio KISS (Keep It Simple, Stupid!). Se implementa el manejo de objetos y funciones reutilizables para mejorar la flexibilidad de los proyectos.</p>
           <p>Creemos que el <b>codigo prolijo</b>, ayuda a trabajar en forma eficiente, integrar mejor el trabajo con otros programadores, y solucionar mejor cualquier conflicto que se presente.</p>
         </div>
 
@@ -108,9 +108,7 @@
             </div>
             <h3>SQL/MySQL</h3>
           </li> <!-- /.benefit -->
-        </ul>
 
-         <ul class="row text-center">
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/CakePHP.png" alt="CakePHP" />
@@ -135,9 +133,7 @@
             </div>
             <h3>Wordpress</h3>
           </li> <!-- /.benefit -->
-        </ul>
 
-         <ul class="row text-center v-center">
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/GNU.png" alt="GNU" />
@@ -164,8 +160,8 @@
       <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1 text-center">
-          <p>A voluntad, realizo hacesoramientos, algunos mantenimientos menores y escuchar ideas. Publico poco codigo ultimamente pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias a por la generocidad.</p>
-          <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color... en especial si es comida.</p>
+          <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escaso codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias a por la generocidad.</p>
+          <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color...</p>
         </div>
       </div> <!-- /.row -->
     </div> <!-- /.container -->
@@ -176,7 +172,7 @@
           Tecnologia de las comunicaciones II - TP I - Sebastian Arca
         </p>
         <p class="pull-right">
-           <a href="https://github.com/0th4rw4/navebinario.com">Codigo Libre</a>
+           <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
         </p>
       </div> <!-- /.container -->
     </footer>
