quito imagen externa

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           Tecnologia de las comunicaciones II - TP I - Sebastian Arca
         </p>
         <p class="pull-right">
-           <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
+           <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="img/creative_commons.png" /></a>
         </p>
       </div> <!-- /.container -->
     </footer>
