--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <footer>
       <div class="container clearfix">
         <p class="pull-left">
-          Tecnologia de las comunicaciones II - TP I - Sebastian Arca
+          Diseño Web / Interactivo - TP Final - Sebastian Arca
         </p>
         <p class="pull-right">
            <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="img/creative_commons.png" /></a>
