text-align: left mobile

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
       <h3 id="weapons" class="subhead">Recursos Principales</h3>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 text-center">
+        <div class="col-md-10 col-md-offset-1">
           <p>Estos son algunos lenguajes de programacion y frameworks con los cuales se trabaja y desarrolla en NaveBinario. <br />A la hora de programar siempre invocamos el principio KISS (Keep It Simple, Stupid!). Se implementa el manejo de objetos y funciones reutilizables para mejorar la flexibilidad de los proyectos.</p>
           <p>Creemos que el <b>codigo prolijo</b>, ayuda a trabajar en forma eficiente, integrar mejor el trabajo con otros programadores, y solucionar mejor cualquier conflicto que se presente.</p>
         </div>
 
-        <ul class="row text-center v-center">
+        <ul class="row v-center">
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/PHP.png" alt="php" />
@@ -159,7 +159,7 @@
 
       <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 text-center">
+        <div class="col-md-10 col-md-offset-1">
           <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escaso codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias a por la generocidad.</p>
           <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color...</p>
         </div>
@@ -169,7 +169,7 @@
 
       <h3 id="contacto" class="subhead">Ponete en contacto !</h3>
       <div class="row">
-        <div class="col-md-10 col-md-offset-1 text-center">
+        <div class="col-md-10 col-md-offset-1">
           <form method="post" action="#" class="form-horizontal">
             <div class="form-group">
               <label for="full_name">Nombre del contacto</label>
