update para mergear a master, con otras cosas cosas mas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Desarrollo Web para tus ideas | Transporta tu proyecto al proximo nivel">
     <meta property="fb:app_id" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://navebinario.com/logo0.png"/>
+    <meta property="og:image" content="http://navebinario.com/logo1.png"/>
   </head>
   <body>
 
@@ -39,8 +39,8 @@
             <li><a href="#top" class="nav-link">Binario</a></li>
             <li><a href="#weapons" class="nav-link">Recursos Principales</a></li>
             <li><a href="#a_voluntad" class="nav-link" title="Proximamente">A Voluntad!</a></li>
-            <li><a href="#portfolio" class="nav-link" title="Portfolio">Portfolio</a></li>
-            <li><a href="#contacto" class="nav-link">Contacto</a></li>
+            <!-- <li><a href="#portfolio" class="nav-link" title="Portfolio">Portfolio</a></li>
+            <li><a href="#contacto" class="nav-link">Contacto</a></li> -->
           </ul>
         </div> <!-- /.navbar-collapse -->
       </div> <!-- /.container -->
@@ -84,75 +84,87 @@
               <img src="iconos/PHP.png" alt="php" />
             </div>
             <h3>PHP | OOP</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class=" benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/JS.png" alt="JavaScript" />
             </div>
             <h3>JavaScript | OOP</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/html5.png" alt="HTML" />
             </div>
             <h3>HTML | HTML5</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/CSS.png" alt="CSS" />
             </div>
             <h3>CSS | CSS3</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/MySQL2.png" alt="SQL" />
             </div>
             <h3>SQL/MySQL</h3>
-          </li> <!-- /.benefit -->
+          </li>
 
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/CakePHP.png" alt="CakePHP" />
             </div>
             <h3>CakePHP</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/JQuery.png" alt="JQuery" />
             </div>
             <h3>JQuery</h3>
-          </li> <!-- /.benefit -->
+          </li>
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Bootstrap.png" alt="Bootstrap" />
             </div>
             <h3>Bootstrap</h3>
-          </li> <!-- /.benefit -->
-          <li class="benefit">
+          </li>
+          <!-- <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Wordpress.png" alt="Wordpress" />
             </div>
             <h3>Wordpress</h3>
-          </li> <!-- /.benefit -->
+          </li>  -->
 
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/GNU.png" alt="GNU" />
             </div>
             <h3>GNU/Linux</h3>
-          </li> <!-- /.benefit -->
-          <li class="benefit">
+          </li>
+          <!-- <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Apache.png" alt="Apache" />
             </div>
             <h3>Apache</h3>
-          </li> <!-- /.benefit -->
+          </li> -->
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Angular.png" alt="Angular" />
             </div>
             <h3>Angular</h3>
-          </li> <!-- /.benefit -->
+          </li>
+          <li class="benefit">
+            <div class="benefit-ball transparent">
+              <img src="iconos/Meterial_Design.png" alt="Meterial Design" />
+            </div>
+            <h3>Meterial Design</h3>
+          </li>
+          <li class="benefit">
+            <div class="benefit-ball transparent">
+              <img src="iconos/meteor.png" alt="Meteor JS" />
+            </div>
+            <h3>Meteor JS</h3>
+          </li>
          </ul>
       </div> <!-- /.row -->
 
@@ -161,7 +173,7 @@
       <h3 id="a_voluntad" class="subhead">A voluntad !</h3>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escaso codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias a por la generocidad.</p>
+          <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escazo codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias por tanta generocidad.</p>
           <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color...</p>
         </div>
       </div> <!-- /.row -->
@@ -169,18 +181,16 @@
 
 
 
-      <h3 id="portfolio" class="subhead">Portfolio</h3>
-      <!--<div class="row">
-         <div class="col-md-10 col-md-offset-1"></div> -->
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
+     <!--  <h3 id="portfolio" class="subhead">Portfolio</h3>
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
           </ol>
 
-          <!-- Wrapper for slides -->
+
           <div class="carousel-inner" role="listbox">
             <div class="item active">
               <a href="https://github.com/0th4rw4/navebinario.com" rel="me nofollow"  target="_blank"> <img src="img/navebinario.com.png" alt="Landing Page" /></a>
@@ -193,7 +203,7 @@
             </div>
           </div>
 
-          <!-- Controls -->
+
           <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -202,14 +212,13 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
-        <!--</div>-->
-      </div> <!-- /.row -->
+      </div> -->
 
 
 
 
       
-
+<!-- 
       <div class="sect-border"></div>
 
       <h3 id="contacto" class="subhead">Ponete en contacto !</h3>
@@ -237,18 +246,18 @@
             <p class="bg-info info-box"> Mensaje enviado con exito. Muchas gracias!</p>
           </form>
         </div>
-      </div> <!-- /.row -->
+      </div> -->
     </div> <!-- /.container -->
 
     <footer>
       <div class="container clearfix">
-        <p class="pull-left">
+        <!-- <p class="pull-left">
           Diseño Web / Interactivo - TP Final - Sebastian Arca
         </p>
         <p class="pull-right">
            <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="img/creative_commons.png" /></a>
-        </p>
-      </div> <!-- /.container -->
+        </p> -->
+      </div>
     </footer>
 
     <script src="js/jquery.js"></script>
@@ -270,8 +279,7 @@
     </script>
   </body>
 <!-- -
-# Autor: Sebastian Arca <sebastianarca@gmail.com>
-# DNI: 36724020
+# Author: Otharwa <otharwa@navebinario.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
