--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+<!--
+# Author: Otharwa <otharwa@navebinario.com>
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU Affero General Public License as
+# published by the Free Software Foundation; either version 3 of the
+# License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU Affero General
+# Public License along with this program.  If not, see
+# <http://www.gnu.org/licenses/>.
+-->
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:og="http://ogp.me/ns#"
       xmlns:fb="http://www.facebook.com/2008/fbml"
@@ -32,19 +49,17 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand nav-link" href="#top"><img class="logo2" src="logo0.png" alt="Nave Binario" /></a>
-        </div> <!-- /.navbar-header -->
+        </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#top" class="nav-link">Binario</a></li>
             <li><a href="#weapons" class="nav-link">Recursos Principales</a></li>
             <li><a href="#a_voluntad" class="nav-link" title="Proximamente">A Voluntad!</a></li>
-            <!-- <li><a href="#portfolio" class="nav-link" title="Portfolio">Portfolio</a></li>
-            <li><a href="#contacto" class="nav-link">Contacto</a></li> -->
           </ul>
-        </div> <!-- /.navbar-collapse -->
-      </div> <!-- /.container -->
-    </nav> <!-- /.navbar -->
+        </div>
+      </div>
+    </nav>
 
     <div id="top" class="binario">
       <div class="container">
@@ -64,8 +79,8 @@
             <a href="https://raw.githubusercontent.com/0th4rw4/navebinario.com/master/19SRg8Y9Ae1VuHArtTLquhmd19uur9VfeD.bmp" rel="me nofollow" target="_blank"><img src="iconos/bitcoin.png" alt="Bitcoin" width="199" height="60" /></a>
             <a href="https://bitcoin.org/es/faq" title="Que es Bitcoin" rel="nofollow"> ¿Que es esto?</a>
           </div>
-      </div> <!-- /.container -->
-    </div> <!-- /.binario -->
+      </div>
+    </div>
 
     <div class="container">
 
@@ -128,25 +143,12 @@
             </div>
             <h3>Bootstrap</h3>
           </li>
-          <!-- <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Wordpress.png" alt="Wordpress" />
-            </div>
-            <h3>Wordpress</h3>
-          </li>  -->
-
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/GNU.png" alt="GNU" />
             </div>
             <h3>GNU/Linux</h3>
           </li>
-          <!-- <li class="benefit">
-            <div class="benefit-ball transparent">
-              <img src="iconos/Apache.png" alt="Apache" />
-            </div>
-            <h3>Apache</h3>
-          </li> -->
           <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Angular.png" alt="Angular" />
@@ -166,7 +168,7 @@
             <h3>Meteor JS</h3>
           </li>
          </ul>
-      </div> <!-- /.row -->
+      </div>
 
       <div class="sect-border"></div>
 
@@ -176,87 +178,11 @@
           <p>A voluntad, realizo asesoramientos, mantenimientos menores y escuchar ideas. <br />Suelo publicar escazo codigo, pero todo lo que pueda devolver a la comunidad del software, sera dado... gracias por tanta generocidad.</p>
           <p>Si necesitas instalar un sistema gnu/linux o alguno otro software libre, acepto retribuciones de cualquier moneda tipo clase y color...</p>
         </div>
-      </div> <!-- /.row -->
-
-
-
-
-     <!--  <h3 id="portfolio" class="subhead">Portfolio</h3>
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-          </ol>
-
-
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <a href="https://github.com/0th4rw4/navebinario.com" rel="me nofollow"  target="_blank"> <img src="img/navebinario.com.png" alt="Landing Page" /></a>
-            </div>
-            <div class="item">
-              <a href="https://github.com/0th4rw4/sistemaDeBlog_PHP"  rel="me nofollow"  target="_blank"> <img src="img/sistemaBlogPHP.png" alt="Sistema a medida PHP" /></a>
-            </div>
-            <div class="item">
-              <a href="https://github.com/0th4rw4/carroDeComprasJS" rel="me nofollow" target="_blank"> <img src="img/carroComprasJS.png" alt="Sistema a medida JS" /></a>
-            </div>
-          </div>
-
-
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-      </div> -->
-
-
-
-
-      
-<!-- 
-      <div class="sect-border"></div>
-
-      <h3 id="contacto" class="subhead">Ponete en contacto !</h3>
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <form method="post" action="#" class="form-horizontal">
-            <div class="form-group">
-              <label for="full_name">Nombre del contacto</label>
-              <input type="text" class="form-control" name="full_name" placeholder="Nombre">
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="text" class="form-control" id="email" name="email" placeholder="Email de contacto">
-            </div>
-            <div class="col-md-12">
-              <label for="exampleInputFile">Contenido</label>
-              <textarea class="form-control" rows="3"></textarea>
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="true" id="newslatter" name="newslatter" /> Recivir novedades 
-              </label>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-            <p class="bg-info info-box"> Mensaje enviado con exito. Muchas gracias!</p>
-          </form>
-        </div>
-      </div> -->
-    </div> <!-- /.container -->
+      </div>
+    </div>
 
     <footer>
       <div class="container clearfix">
-        <!-- <p class="pull-left">
-          Diseño Web / Interactivo - TP Final - Sebastian Arca
-        </p>
-        <p class="pull-right">
-           <a href="https://github.com/0th4rw4/navebinario.com"><img alt="Licencia Creative Commons" style="border-width:0" src="img/creative_commons.png" /></a>
-        </p> -->
       </div>
     </footer>
 
@@ -278,22 +204,5 @@
       });
     </script>
   </body>
-<!-- -
-# Author: Otharwa <otharwa@navebinario.com>
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as
-# published by the Free Software Foundation; either version 3 of the
-# License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General
-# Public License along with this program.  If not, see
-# <http://www.gnu.org/licenses/>.
-->
 </html>
 
