--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
         <div class="social">
           <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a>
-          <a href="https://github.com/0th4rw4" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
-          <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" /></a>          
+          <a href="https://github.com/otharwa" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
+          <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" /></a>
         </div>
 
         <div id="bitcoin" class="text-right">
-            <a href="https://raw.githubusercontent.com/0th4rw4/navebinario.com/master/19SRg8Y9Ae1VuHArtTLquhmd19uur9VfeD.bmp" rel="me nofollow" target="_blank"><img src="iconos/bitcoin.png" alt="Bitcoin" width="199" height="60" /></a>
+            <a href="https://raw.githubusercontent.com/otharwa/navebinario.com/master/19SRg8Y9Ae1VuHArtTLquhmd19uur9VfeD.bmp" rel="me nofollow" target="_blank"><img src="iconos/bitcoin.png" alt="Bitcoin" width="199" height="60" /></a>
             <a href="https://bitcoin.org/es/faq" title="Que es Bitcoin" rel="nofollow"> ¿Que es esto?</a>
           </div>
       </div>
@@ -167,6 +167,12 @@
             </div>
             <h3>Meteor JS</h3>
           </li>
+          <li class="benefit">
+            <div class="benefit-ball transparent">
+              <img src="iconos/Scrum.png" alt="Scrum" />
+            </div>
+            <h3>Metodologia Scrum</h3>
+          </li>
          </ul>
       </div>
 
@@ -205,4 +211,3 @@
     </script>
   </body>
 </html>
-
