remove temp scrum

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
             </div>
             <h3>Meteor JS</h3>
           </li>
-          <li class="benefit">
+          <!-- <li class="benefit">
             <div class="benefit-ball transparent">
               <img src="iconos/Scrum.png" alt="Scrum" />
             </div>
             <h3>Metodologia Scrum</h3>
-          </li>
+          </li> -->
          </ul>
       </div>
 
