--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p><a class="btn btn-warning btn-lg nav-link" href="#contacto"> </a></p>
 
         <div class="social">
-          <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a>
+          <!-- <a href="http://ar.linkedin.com/in/navebinario/" title="LinkedIn" rel="me nofollow" ><img src="iconos/LinkedIn.png" alt="LinkedIn" /></a> -->
           <a href="https://github.com/otharwa" title="Github" rel="me nofollow"><img src="iconos/GitHub2.png" alt="GitHub" /></a>
           <a href="http://navebinario.com/otharwa.pub" title="Clave GPG" rel="me nofollow"> <img src="iconos/GPG.png" alt="GPG" /></a>
         </div>
